--- a/package.json
+++ b/package.json
@@ -58,6 +58,7 @@
     "devDependencies": {
         "babel-plugin-import": "^1.13.5",
         "customize-cra": "^1.0.0",
-        "react-app-rewired": "^2.2.1"
+        "react-app-rewired": "^2.2.1",
+        "react-router-dom": "^6.6.1"
     }
 }
