--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
         "@types/styled-components": "^5.1.26",
         "@types/uuid": "^8.3.4",
         "axios": "^1.2.1",
+        "country-state-city": "^3.1.2",
         "react": "^18.1.0",
         "react-dom": "^18.1.0",
         "react-redux": "^8.0.1",
